--- a/src/views/song-list/index.scss
+++ b/src/views/song-list/index.scss
@@ -30,7 +30,7 @@
 		position: absolute;
 		width: 100%;
 		height: 100%;
-		background: url(/src/assets/avater.png) no-repeat 8% bottom;
+		background: url(@/assets/avater.png) no-repeat 8% bottom;
 		background-size: 22%;
 		z-index: -1;
 	}
@@ -56,6 +56,7 @@
 				justify-content: flex-start;
 				height: unset;
 				padding: 0.3125rem 0 0.3125rem 0.5625rem;
+				border-left: 5px #d0e9ff solid;
 			}
 		}
 	}
