--- a/src/views/song-list/index.scss
+++ b/src/views/song-list/index.scss
@@ -1,33 +1,3 @@
-.slogan {
-	margin: 0 auto;
-	background: url(@/assets/cool-background.png);
-	background-repeat: no-repeat;
-	background-size: cover;
-	position: relative;
-	.logo {
-		text-shadow: 0.0625rem 0.0625rem 0.125rem black;
-		color: white;
-		font-size: 4.375rem;
-		text-align: center;
-		font-weight: bolder;
-	}
-	.logo-cn {
-		text-shadow: 0.0625rem 0.0625rem 0.125rem black;
-		color: #a2d3ff;
-		font-size: 2.25rem;
-		font-weight: bolder;
-		text-align: right;
-	}
-	&::before {
-		content: '';
-		position: absolute;
-		width: 100%;
-		height: 100%;
-		background: url(@/assets/avater.png) no-repeat 8% bottom;
-		background-size: 22%;
-		z-index: -1;
-	}
-}
 .el-card:not(:first-child) {
 	border-radius: 20px;
 	:deep(.el-card__body) {
@@ -50,6 +20,39 @@
 	);
 	background-size: 3.5356rem 3.5356rem;
 	padding: 0.9375rem;
+	.slogan {
+		margin: 0 auto;
+		background: url(@/assets/cool-background.png);
+		background-repeat: no-repeat;
+		background-size: cover;
+		position: relative;
+		.logo {
+			text-shadow: 0.0625rem 0.0625rem 0.125rem black;
+			color: white;
+			font-size: 4.375rem;
+			text-align: center;
+			font-weight: bolder;
+		}
+		.logo-cn {
+			text-shadow: 0.0625rem 0.0625rem 0.125rem black;
+			color: #a2d3ff;
+			font-size: 2.25rem;
+			font-weight: bolder;
+			text-align: right;
+		}
+		&::before {
+			content: '';
+			position: absolute;
+			width: 100%;
+			height: 100%;
+			background: url(@/assets/avater.png) no-repeat 8% bottom;
+			background-size: 22%;
+			z-index: -1;
+		}
+	}
+	.song-main {
+		width: 100%;
+	}
 	.song-list {
 		margin-bottom: 20px;
 	}
