--- a/src/views/song-list/index.scss
+++ b/src/views/song-list/index.scss
@@ -49,5 +49,9 @@
 		min-width: 4.5rem;
 		margin: 5px 0.5rem 5px 0;
 		white-space: break-spaces;
+		line-height: unset;
+		min-height: 24px;
+		padding: 4px 9px;
+		height: unset;
 	}
 }
