--- a/src/views/song-list/index.scss
+++ b/src/views/song-list/index.scss
@@ -31,6 +31,7 @@
 			font-size: 4.375rem;
 			text-align: center;
 			font-weight: bolder;
+			font-family: BEYNO;
 		}
 		.logo-cn {
 			text-shadow: 0.0625rem 0.0625rem 0.125rem black;
@@ -38,6 +39,7 @@
 			font-size: 2.25rem;
 			font-weight: bolder;
 			text-align: right;
+			font-family: Bianlidian;
 		}
 		&::before {
 			content: '';
