update font size

--- a/src/views/song-list/index.scss
+++ b/src/views/song-list/index.scss
@@ -28,10 +28,12 @@
 		.logo {
 			text-shadow: 0.0625rem 0.0625rem 0.125rem black;
 			color: white;
-			font-size: 4.375rem;
+			font-size: 2.7rem;
 			text-align: center;
 			font-weight: bolder;
 			font-family: BEYNO;
+			height: 5rem;
+			line-height: 5rem;
 		}
 		.logo-cn {
 			text-shadow: 0.0625rem 0.0625rem 0.125rem black;
