--- a/src/views/song-list/index.scss
+++ b/src/views/song-list/index.scss
@@ -69,3 +69,20 @@
 		height: unset;
 	}
 }
+.singer-item {
+	border: 1px gray dashed;
+	border-radius: 0.3125rem;
+	padding: 0.3125rem;
+	font-size: 0.875rem;
+	margin: 0 0.625rem 0.625rem 0;
+	display: inline-flex;
+	flex-wrap: wrap;
+	align-items: center;
+	background: #fff;
+}
+
+.singer {
+	font-size: 0.75rem;
+	margin-left: 3px;
+	color: #b7b7b7;
+}
