--- a/src/components/song-list/index.scss
+++ b/src/components/song-list/index.scss
@@ -35,12 +35,11 @@
 			line-height: 5rem;
 		}
 		.logo-cn {
-			text-shadow: 0.0625rem 0.0625rem 0.125rem black;
-			color: #a2d3ff;
+			text-shadow: 3px 3px 0.125rem black;
+			color: #fff;
 			font-size: 2.25rem;
-			font-weight: bolder;
 			text-align: right;
-			font-family: Bianlidian;
+			font-family: 仿宋;
 		}
 	}
 	.song-main {
