--- a/src/components/song-list/index.scss
+++ b/src/components/song-list/index.scss
@@ -27,10 +27,10 @@
 		.logo {
 			text-shadow: 0.0625rem 0.0625rem 0.125rem black;
 			color: white;
-			// font-size: 2.7rem;
+			font-size: 2.7rem;
 			text-align: center;
 			font-weight: bolder;
-			// font-family: BEYNO;
+			font-family: BEYNO;
 			height: 5rem;
 			line-height: 5rem;
 		}
