--- a/src/components/song-list/index.scss
+++ b/src/components/song-list/index.scss
@@ -39,7 +39,7 @@
 			color: #fff;
 			font-size: 2.25rem;
 			text-align: right;
-			font-family: 仿宋;
+			font-family: FangSong;
 		}
 	}
 	.song-main {
