--- a/src/components/song-list/index.scss
+++ b/src/components/song-list/index.scss
@@ -35,9 +35,9 @@
 			line-height: 5rem;
 		}
 		.logo-cn {
-			text-shadow: 3px 3px 0.125rem black;
+			text-shadow: 0.1875rem 0.1875rem 0.125rem black;
 			color: #fff;
-			font-size: 2.25rem;
+			font-size: 1.8rem;
 			text-align: right;
 			font-family: FangSong;
 		}
@@ -46,24 +46,24 @@
 		width: 100%;
 	}
 	.song-list {
-		margin-bottom: 20px;
-		border-radius: 20px;
+		margin-bottom: 1.25rem;
+		border-radius: 1.25rem;
 		:deep(.el-card__body) {
 			padding: 0.9375rem 0 0.9375rem 0.9375rem;
 		}
 	}
 	.song-item {
 		min-width: 4.5rem;
-		margin: 5px 0.5rem 5px 0;
+		margin: 0.3125rem 0.5rem 0.3125rem 0;
 		white-space: break-spaces;
 		line-height: unset;
-		min-height: 24px;
-		padding: 4px 9px;
+		min-height: 1.5rem;
+		padding: 0.25rem 0.5625rem;
 		height: unset;
 	}
 }
 .singer-item {
-	border: 1px gray dashed;
+	border: 0.0625rem gray dashed;
 	border-radius: 0.3125rem;
 	padding: 0.3125rem;
 	font-size: 0.875rem;
@@ -76,9 +76,12 @@
 
 .singer {
 	font-size: 0.75rem;
-	margin-left: 3px;
+	margin-left: 0.1875rem;
 	color: #b7b7b7;
 }
 #default-song {
-	margin-top: 20px;
+	margin-top: 1.25rem;
+}
+.el-tag {
+	font-size: 0.875rem;
 }
